<resources>
    <string name="app_name">SISMOLA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_parent">Parent</string>
    <string name="menu_percent">Percent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device">Device</string>
    <string name="last_update_xyz">Last Update: %s</string>
    <string name="intensitas_cahaya">INTENSITAS CAHAYA</string>
    <string name="more_info">More Info</string>
    <string name="curah_hujan">CURAH HUJAN</string>
    <string name="ph_tanah">PH TANAH</string>
    <string name="kelembapan_tanah">KELEMBAPAN TANAH</string>
    <string name="suhu_tanah">SUHU TANAH</string>
    <string name="kelembapan_udara">KELEMBAPAN UDARA</string>
    <string name="suhu_udara">SUHU UDARA</string>
    <string name="refresh">Refresh</string>
</resources>
