<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgcontrolpanel"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".presentation.fragment.Control_Panel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/device" />

            <Spinner
                android:id="@+id/fcp_spinner_devices"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/fcp_spinner_devices"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                tools:text = "Last Update"
                android:id="@+id/fcp_tv_last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

       </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cahaya"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/intensitas_cahaya" />

                    <TextView
                        android:gravity="center"
                        tools:text="0"
                        android:textStyle="bold"
                        android:textSize="44sp"
                        android:id="@+id/fcp_itc"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/more_info" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/hujan"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/curah_hujan" />

                    <TextView
                        android:gravity="center"
                        tools:text="0"
                        android:textStyle="bold"
                        android:textSize="44sp"
                        android:id="@+id/fcp_ch"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/more_info" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="340dp"
                android:layout_height="140dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/tanah"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/ph_tanah" />

                    <TextView
                        android:gravity="center"
                        tools:text="0"
                        android:textStyle="bold"
                        android:textSize="44sp"
                        android:id="@+id/fcp_ph"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/more_info" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/tanah"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/kelembapan_tanah" />

                    <TextView
                        android:gravity="center"
                        tools:text="0"
                        android:textStyle="bold"
                        android:textSize="44sp"
                        android:id="@+id/fcp_kt"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/more_info" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/tanah"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/suhu_tanah" />

                    <TextView
                        android:gravity="center"
                        tools:text="0"
                        android:textStyle="bold"
                        android:textSize="44sp"
                        android:id="@+id/fcp_st"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/more_info" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/udara"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/kelembapan_udara" />

                    <TextView
                        android:gravity="center"
                        tools:text="0"
                        android:textStyle="bold"
                        android:textSize="44sp"
                        android:id="@+id/fcp_ku"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/more_info" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/udara"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/suhu_udara" />

                    <TextView
                        android:gravity="center"
                        tools:text="0"
                        android:textStyle="bold"
                        android:textSize="44sp"
                        android:id="@+id/fcp_su"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/more_info" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
